fix contrast card with gradient

--- a/src/scss/blocks/_projects-preview.scss
+++ b/src/scss/blocks/_projects-preview.scss
@@ -57,6 +57,19 @@
 
       // Contenu de la carte
 
+      .project-card-img-hover {
+        z-index: 0;
+  opacity: 1;
+  position: absolute;
+  color: $color-base;
+  text-align: center;
+  width: 100%;
+  height: 25%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 100%);
+
+  transition: opacity 300ms;
+        
+      }
       .project-card-img {
         display: block;
         width: auto;
